3.4.2
 - Add Windows binaries for ucrt targets

3.4.1
 - Minor compatibility fixes by Jan Marvin for new versions of libv8.

3.4.0
 - When setting envvar DOWNLOAD_STATIC_LIBV8=1 on Linux at build-time, the
   configure script automatically downloads a static libv8, instead of looking
   for libv8 on the system. This allows the package to be installed on distros
   that do not have libv8, or ship with a very old V8.
 - The above should work for all x86_64 Linux systems with at least gcc-4.8.5
   and is enabled by default on Travis and Github Actions.
 - Do not assume bash in configure script

3.3.1
 - Fix a bug in the configure script

3.3.0
 - Use CXX14 when available, required as of libv8 version 8.7.80

3.2.0
 - Fix bug with pointer compression feature-test on Debian / Anaconda
 - Linux: increase JS stack limit, because of problems with new libv8 on Fedora.
 - Add FatalErrorHandler and MessageListener callbacks (that just print stuff)
 - Fix UBSAN error during teardown (package unload)

3.1.0
 - Fix configure script for pointer compression in upcoming V8 engine 8.4
 - MacOS: binary packagess now ship with V8 engine 8.3

3.0.2
 - Windows: fix text encoding bug introduced in 3.0 for non-ascii text.
 - Fix unit test for big-endian systems

3.0.1
 - Fix build for old versions of R using old compilers that do not default to C++11

3.0
 - Internal rewrite of object serialization to prepare for wasm
 - Automatically convert raw vectors to/from Uint8Array in eval/get/assign
 - Experimental wasm API + test
 - Fix callback API crashes in V8 7.9+ (Jan Marvin, #70, #71, #75)
 - Build with -DV8_ENABLE_CHECKS to get better error messages

2.3
 - Fix for removed API in libv8 version 7.7

2.2
 - Fixes for API changes in libv8 version 7.4 and 7.5
 - MacOS: fix include/linker path for new location of v8

2.1
 - Remove special casing for libnode-dev on Debian: libnode-dev now
   officially provides and symlinks libv8-dev.
 - Fix build for new V8 7.3.492.22 (Jan Marvin, #55)

2.0