@@ -1,41 +1,0 @@
-language: r
-cache: packages
-latex: false
-fortran: false
-
-r_check_args: '--no-manual'
-
-# Test against the actual system V8
-env: DISABLE_STATIC_LIBV8=1
-
-matrix:
-  include:
-    - r: 3.4
-    - r: 3.4
-      addons:
-        apt:
-          sources:
-            - sourceline: 'ppa:cran/travis'
-          packages: libnode-dev
-    - dist: xenial
-    - dist: xenial
-      addons:
-        apt:
-          packages: libnode-dev
-    - dist: bionic
-    - dist: bionic
-      addons:
-        apt:
-          packages: libnode-dev
-    - dist: bionic
-      env: DOWNLOAD_STATIC_LIBV8=1
-
-addons:
-  apt:
-    packages:
-      - libv8-dev
-
-notifications:
-  email:
-    on_success: change
-    on_failure: change
