@@ -1,3 +1,6 @@
+3,4,3
+ - Default to static libv8 on legacy Ubuntu distros that have libv8-3.14.5
+
 3.4.2
  - Add Windows binaries for ucrt targets
 
